--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,6 @@
 modLoader="javafml"
-loaderVersion="[33,)"
-license="MIT License https://github.com/McJtyMods/RFToolsBase/blob/1.16/LICENCE"
+loaderVersion="[39,)"
+license="MIT License https://github.com/McJtyMods/RFToolsBase/blob/1.16/LICENSE"
 issueTrackerURL="http://github.com/McJtyMods/Restrictions/issues"
 displayURL="http://github.com/McJtyMods/Restrictions/"
 #logoFile="examplemod.png" #optional
@@ -18,12 +18,12 @@ A vanilla+ style mod that adds some blocks to help push/pull mobs and players
 [[dependencies.restrictions]]
     modId="forge"
     mandatory=true
-    versionRange="[33,)"
+    versionRange="[39,)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.restrictions]]
     modId="mcjtylib"
     mandatory=false
-    versionRange="[1.16-5.0.4,)"
+    versionRange="[1.18-6.0.9,)"
     ordering="AFTER"
     side="BOTH"
